--- a/Webpage/angular.json
+++ b/Webpage/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Webpage"
+    }
+  },
+  "defaultProject": "Webpage",
+  "cli": {
+    "analytics": false
+  }
 }
